# DBT-Elementary

./: README.md  docker-compose.yml  pyproject.toml
marc_shop/: .gitignore  .pre-commit-config.yaml  .sqlfluff  dbt_project.yml  package-lock.yml  packages.yml  profile.yml  profiles.yml  requirements.txt
marc_shop/models/: orders.sql
marc_shop/models/staging/: _staging__models.yml  stg_payments.sql
marc_shop/tests/generic/: is_not_null.sql
