[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["marcelo-costamagna <marcelo.costamagna@muttdata.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.7.7"
dbt-core = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
