[project]
name = "dbt-elementary"
version = "0.1.0"
description = ""
authors = [
    {name = "marcelo-costamagna",email = "marcelo.costamagna@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dbt-core (>=1.9.2,<2.0.0)",
    "sqlfluff (>=3.3.1,<4.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
